--- a/HTML5 e CSS3 parte 1 - A primeira página da Web/style.css
+++ b/HTML5 e CSS3 parte 1 - A primeira página da Web/style.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 .principal{
     background: #CCCCCC;
     padding: 30px;
@@ -10,8 +6,7 @@ body {
 #banner {
     width: 100%;
 }
-
-h1 {
+.titulo-centralizado {
     text-align: center
 }
 
@@ -36,10 +31,6 @@ em strong {
     padding: 20px;
 }
 
-h2 {
-    text-align: center;
-}
-
 ul {
     display: inline-block;
     vertical-align: top;
@@ -49,4 +40,7 @@ ul {
 
 .imagembeneficios {
     width: 50%;
+}
+.titulo-principal {
+    padding-left: 20px;
 }
