Lidando com bordas

--- a/HTML5 e CSS3 parte 2 - Posicionamento, listas e navegação/produtos.css
+++ b/HTML5 e CSS3 parte 2 - Posicionamento, listas e navegação/produtos.css
@@ -1,5 +1,5 @@
 header {
-    background: #BBBBBB;
+    background: #bbbbbb;
     padding: 20px 0;
 }
 
@@ -32,7 +32,6 @@ nav a {
     margin: 0 auto;
     padding: 50px 0;
 }
-
 .produtos li {
     display: inline-block;
     text-align: center;
@@ -41,8 +40,9 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
-
 .produtos h2 {
     font-size: 30px;
     font-weight: bold;
