--- a/HTML5 e CSS3 parte 2 - Posicionamento, listas e navegação/produtos.css
+++ b/HTML5 e CSS3 parte 2 - Posicionamento, listas e navegação/produtos.css
@@ -27,11 +27,17 @@ nav a {
     font-size: 22px;
     text-decoration: none;
 }
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
+}
+
 .produtos {
     width: 940px;
     margin: 0 auto;
     padding: 50px 0;
 }
+
 .produtos li {
     display: inline-block;
     text-align: center;
@@ -42,6 +48,15 @@ nav a {
     box-sizing: border-box;
     border: 2px solid #000000;
     border-radius: 10px;
+}
+.produtos li:hover {
+    border-color: #C78C19;
+}
+.produtos li:active {
+    border-color: #088C19;
+}
+.produtos li:hover h2 {
+    font-size: 34px;
 }
 .produtos h2 {
     font-size: 30px;
