--- a/HTML5 e CSS3 parte 4 - Avançando no CSS/style.css
+++ b/HTML5 e CSS3 parte 4 - Avançando no CSS/style.css
@@ -87,10 +87,6 @@ footer {
     font-size: 13px;
     margin: 20px 0 0;
 }
-main {
-    width: 940px;
-    margin: 0 auto;
-}
 
 form {
     margin: 40px 0;
@@ -178,6 +174,7 @@ td, th {
 
 .mapa {
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
 }
 
 .mapa p {
@@ -187,5 +184,49 @@ td, th {
 
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.imagem-beneficios {
+    width: 60%;
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.itens:before {
+    content: "★";
 }
