--- a/HTML5 e CSS3 parte 4 - Avançando no CSS/style.css
+++ b/HTML5 e CSS3 parte 4 - Avançando no CSS/style.css
@@ -213,8 +213,14 @@ td, th {
 
 .imagem-beneficios {
     width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
 }
 
+.imagem-beneficios:hover {
+    opacity: 0.3;
+}
 .mapa-conteudo {
     width: 940px;
     margin: 0 auto;
